--- a/auth-service/.github/workflows/ci.yml
+++ b/auth-service/.github/workflows/ci.yml
@@ -1,52 +1,70 @@
 name: Auth Service CI/CD
 
-# Trigger on all branches for builds, PRs targeting main
 on:
   push:
-    branches: ['*']       # Build on any branch
+    branches: ['main', 'release/*']  # Only important branches
   pull_request:
-    branches: ['main']    # Run CI on PRs to main
+    branches: ['main', 'release/*']
   workflow_dispatch:
 
 jobs:
-  build-and-publish:
+  test:
     runs-on: ubuntu-latest
-
+    if: github.event_name == 'pull_request'
+    
     steps:
-      #  Checkout repo
       - name: Checkout code
         uses: actions/checkout@v3
-
-      #  Set up JDK 17
+        
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 17
+          
+      - name: Run tests
+        run: mvn test  # ← TESTS RUN HERE!
 
-      #  Build JAR without tests
+  build:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 17
+          
       - name: Build with Maven
-        run: mvn clean package -DskipTests
-
-      #  Install Podman
+        run: mvn clean package -DskipTests  # Tests already ran in PR
+        
       - name: Install Podman
         run: |
           sudo apt-get update
           sudo apt-get install -y podman
-
-      #  Build Podman container
-      - name: Build Podman image
-        run: podman build -t ghcr.io/${{ github.repository_owner }}/auth-service:latest .
-
-      #  Log in to GitHub Container Registry
+          
+      - name: Build Podman image with version
+        run: |
+          # Get version from pom.xml
+          VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+          podman build \
+            -t ghcr.io/${{ github.repository_owner }}/auth-service:latest \
+            -t ghcr.io/${{ github.repository_owner }}/auth-service:${{ github.sha }} \
+            -t ghcr.io/${{ github.repository_owner }}/auth-service:$VERSION .
+            
       - name: Log in to GHCR
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      #  Push image to GHCR ONLY from main branch
-      - name: Push Podman image to GHCR
-        if: github.ref == 'refs/heads/main'
-        run: podman push ghcr.io/${{ github.repository_owner }}/auth-service:latest
+          
+      - name: Push Podman images
+        run: |
+          podman push ghcr.io/${{ github.repository_owner }}/auth-service:latest
+          podman push ghcr.io/${{ github.repository_owner }}/auth-service:${{ github.sha }}
+          podman push ghcr.io/${{ github.repository_owner }}/auth-service:$VERSION
