--- a/.github/workflows/auth-ci.yml
+++ b/.github/workflows/auth-ci.yml
@@ -49,14 +49,12 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y podman
           
-      - name: Build Podman image with version
+      - name: Build Podman image
         run: |
           cd auth-service
-          VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+          echo "Building image with localhost prefix..."
           podman build \
-            -t auth-service:latest \
-            -t auth-service:${{ github.sha }} \
-            -t auth-service:$VERSION \
+            -t localhost/auth-service:${{ github.sha }} \
             -f Containerfile .
             
       - name: Log in to GHCR
@@ -66,14 +64,21 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           
-      - name: Push Podman images
+      - name: Push to GHCR
         run: |
-          # Tag for GHCR
-          podman tag auth-service:latest ghcr.io/${{ github.repository_owner }}/auth-service:latest
-          podman tag auth-service:${{ github.sha }} ghcr.io/${{ github.repository_owner }}/auth-service:${{ github.sha }}
-          podman tag auth-service:$VERSION ghcr.io/${{ github.repository_owner }}/auth-service:$VERSION
+          echo "Tagging and pushing images..."
           
-          # Push to GHCR
-          podman push ghcr.io/${{ github.repository_owner }}/auth-service:latest
+          # Tag for GHCR (remove localhost/ prefix)
+          podman tag localhost/auth-service:${{ github.sha }} ghcr.io/${{ github.repository_owner }}/auth-service:${{ github.sha }}
+          podman tag localhost/auth-service:${{ github.sha }} ghcr.io/${{ github.repository_owner }}/auth-service:latest
+          
+          echo "Pushing SHA tag..."
           podman push ghcr.io/${{ github.repository_owner }}/auth-service:${{ github.sha }}
-          podman push ghcr.io/${{ github.repository_owner }}/auth-service:$VERSION
+          
+          echo "Pushing latest tag..."
+          podman push ghcr.io/${{ github.repository_owner }}/auth-service:latest
+          
+          echo "✅ Successfully pushed to GHCR!"
+          echo "📦 Images available at:"
+          echo "   - ghcr.io/${{ github.repository_owner }}/auth-service:latest"
+          echo "   - ghcr.io/${{ github.repository_owner }}/auth-service:${{ github.sha }}"
