--- a/.github/workflows/auth-ci.yml
+++ b/.github/workflows/auth-ci.yml
@@ -1,73 +1,65 @@
-
 name: Auth Service CI
 
-
-
 on:
-
   push:
-
     branches: ['main']
-
     paths: ['auth-service/**']
-
   pull_request:
-
     branches: ['main']
-
     paths: ['auth-service/**']
-
-
+  workflow_dispatch:
 
 jobs:
-
   test-and-build:
-
     runs-on: ubuntu-latest
-
     steps:
-
-      - uses: actions/checkout@v3
-
+      - uses: actions/checkout@v4 # Updated to v4
       
-
       - name: Set up Java
-
-        uses: actions/setup-java@v3
-
+        uses: actions/setup-java@v4 # Updated to v4
         with:
-
           distribution: 'temurin'
-
           java-version: '17'
-
           
-
       - name: Run Maven Tests
-
         run: cd auth-service && mvn test
 
-
-
       - name: Build & Push Image (GHCR)
-
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-
         run: |
-
-          # Use your existing Podman logic here
-
           echo "${{ secrets.GITHUB_TOKEN }}" | podman login ghcr.io -u ${{ github.actor }} --password-stdin
-
           cd auth-service
-
           mvn clean package -DskipTests
-
+          # Building directly with the final tag names
           podman build -t ghcr.io/${{ github.repository_owner }}/auth-service:${{ github.sha }} -f Containerfile .
-
           podman push ghcr.io/${{ github.repository_owner }}/auth-service:${{ github.sha }}
-
           podman tag ghcr.io/${{ github.repository_owner }}/auth-service:${{ github.sha }} ghcr.io/${{ github.repository_owner }}/auth-service:latest
-
           podman push ghcr.io/${{ github.repository_owner }}/auth-service:latest
+
+  deploy:
+    # This job only runs if test-and-build finishes successfully
+    needs: test-and-build 
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
+    steps:
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: Deploy to Cloud Run
+        run: |
+          gcloud run deploy auth-service \
+            --image ghcr.io/${{ github.repository_owner }}/auth-service:latest \
+            --region us-central1 \
+            --platform managed \
+            --allow-unauthenticated \
+            --port 8081
+
 
