--- a/.github/workflows/auth-cd.yml
+++ b/.github/workflows/auth-cd.yml
@@ -1,81 +1,30 @@
-
 name: Auth Service CD
 
-
-
 on:
-
   workflow_run:
-
     workflows: ["Auth Service CI"]
-
     types: [completed]
-
     branches: [main]
 
-
-
-# Add this block to fix the "Empty Secret" issue
-
-permissions:
-
-  contents: read
-
-  packages: read
-
-
-
 jobs:
-
-  deploy-to-cloud-run:
-
+  deploy:
+    # Only run if CI was successful
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
-
     runs-on: ubuntu-latest
-
-    
-
     steps:
-
-      # Step 1: Always checkout, even if just for metadata
-
-      - name: Checkout code
-
-        uses: actions/checkout@v4
-
-
-
-      # Step 2: Use v2 of the Auth action
-
       - name: Authenticate to Google Cloud
-
         uses: google-github-actions/auth@v2
-
         with:
-
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
-
-
-
-      - name: Set up Cloud SDK
-
-        uses: google-github-actions/setup-gcloud@v2
-
-
+          # Tomorrow you will choose ONE of these:
+          credentials_json: ${{ secrets.GCP_SA_KEY }} 
+          # OR if you use WIF:
+          # workload_identity_provider: 'projects/...'
+          # service_account: '...'
 
       - name: Deploy to Cloud Run
-
         run: |
-
           gcloud run deploy auth-service \
-
             --image ghcr.io/${{ github.repository_owner }}/auth-service:latest \
-
             --region us-central1 \
-
-            --platform managed \
-
-            --allow-unauthenticated \
-
-            --port 8081
-
+            --port 8081 \
+            --allow-unauthenticated
