--- a/.github/workflows/product-ci.yml
+++ b/.github/workflows/product-ci.yml
@@ -7,10 +7,18 @@ on:
       - 'product-service/**'
       - '.github/workflows/product-ci.yml'
 
+env:
+  REGISTRY: ghcr.io
+  # Replace 'YOUR_GITHUB_USERNAME' with your actual GitHub username
+  IMAGE_NAME: ${{ github.repository_owner }}/product-service
+
 jobs:
   test-and-build:
     runs-on: ubuntu-latest
-    
+    permissions:
+      contents: read
+      packages: write # This gives the Action permission to push to your Packages tab
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -23,20 +31,25 @@ jobs:
           cache: 'maven'
 
       - name: Run Tests with Testcontainers
-        # This will work on GitHub because Linux has Docker pre-installed!
         run: mvn test -pl product-service
 
       - name: Build with Maven
         run: mvn clean package -DskipTests -pl product-service
 
-      # --- GOOGLE CLOUD STEPS (For Tomorrow) ---
-      # - name: Authenticate to Google Cloud
-      #   uses: 'google-github-actions/auth@v2'
-      #   with:
-      #     credentials_json: '${{ secrets.GCP_SA_KEY }}'
+      # --- This login step is mandatory to push the image ---
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      # - name: Build and Push Podman/Docker Image
-      #   run: |
-      #     gcloud auth configure-docker us-central1-docker.pkg.dev
-      #     docker build -t us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/ecommerce/product-service:latest ./product-service
-      #     docker push us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/ecommerce/product-service:latest
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./product-service
+          file: ./product-service/Containerfile
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
