--- a/.github/workflows/product-ci.yml
+++ b/.github/workflows/product-ci.yml
@@ -7,17 +7,12 @@ on:
       - 'product-service/**'
       - '.github/workflows/product-ci.yml'
 
-env:
-  REGISTRY: ghcr.io
-  # Replace 'YOUR_GITHUB_USERNAME' with your actual GitHub username
-  IMAGE_NAME: ${{ github.repository_owner }}/product-service
-
 jobs:
-  test-and-build:
+  test-build-and-push:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write # This gives the Action permission to push to your Packages tab
+      packages: write
 
     steps:
       - name: Checkout code
@@ -30,26 +25,19 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
 
-      - name: Run Tests with Testcontainers
-        run: mvn test -pl product-service
+      # This step does EVERYTHING: 
+      # 1. Starts Testcontainers 
+      # 2. Runs JUnits 
+      # 3. If tests pass, it creates the JAR file in target/
+      - name: Test and Build JAR
+        run: mvn clean package -pl product-service
 
-      - name: Build with Maven
-        run: mvn clean package -DskipTests -pl product-service
+      - name: Log in to GHCR
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | podman login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      # --- This login step is mandatory to push the image ---
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and Push Docker Image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./product-service
-          file: ./product-service/Containerfile
-          push: true
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+      - name: Build and Push Image with Podman
+        run: |
+          cd product-service
+          # This uses the JAR created in the step above
+          podman build -t ghcr.io/${{ github.repository_owner }}/product-service:latest -f Containerfile .
+          podman push ghcr.io/${{ github.repository_owner }}/product-service:latest
