--- a/product-service/Containerfile
+++ b/product-service/Containerfile
@@ -1,15 +1,14 @@
-LABEL org.opencontainers.image.source=https://github.com/ashmithadsouza/ecommerce-deployment
-
 FROM eclipse-temurin:17-jre
-# Link the image to the repo so it shows up in your Packages tab
-LABEL org.opencontainers.image.source=https://github.com/${{ github.repository }}
+
+
+LABEL org.opencontainers.image.source=https://github.com/ashmithadsouza/ecommerce-deployment
 
 WORKDIR /app
 
 # Matches the target folder inside the product-service directory
 COPY target/*.jar app.jar
 
-# Product service usually runs on a different port than Auth (e.g., 8082)
+# Product service port
 EXPOSE 8082
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
