--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5433/product_db
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5433/product_db}
     username: postgres
     password: password
     driver-class-name: org.postgresql.Driver
